fix venue's title alignement for very small screen

--- a/sass/layouts/_venue.scss
+++ b/sass/layouts/_venue.scss
@@ -52,7 +52,7 @@
         padding-top: 20px;
         padding-bottom: 20px;
         margin-top: -70px;
-        margin-left: 0;
+        padding-left: 1.3rem;
         background-color: $lightgrey_color;
         border-top-right-radius: 40px;
         border-top-left-radius: 40px;
